* src/templates/screens/admin/EditUser.vm   Removed some duplication when accessing the user data, and added   $userNameData.  Added read-only field for viewing it.
Issue: SCB197

--- a/src/templates/screens/admin/EditUser.vm
+++ b/src/templates/screens/admin/EditUser.vm
@@ -1,6 +1,6 @@
 #**
 @author <a href="mailto:dr@bitonic.com">Douglas B. Robertson</a>
-@version $Id: EditUser.vm,v 1.12 2003/04/11 16:25:57 jmcnally Exp $
+@version $Id: EditUser.vm,v 1.13 2003/05/23 19:47:29 dlr Exp $
 *#
 
 #set ($state = $data.Parameters.getString("state",""))
@@ -25,40 +25,52 @@
   #set ($regGroup = $intake.Register.Default)
   #set ($firstNameData = $user2.FirstName)
   #set ($lastNameData = $user2.LastName)
+  #set ($userNameData = $user2.UserName)
   #set ($emailData = $user2.Email)
   #set ($passwordData = "")
-#elseif ($user2)
-  #set ($regGroup = $intake.Register.mapTo($user2))
-  #set ($firstNameData = $regGroup.FirstName)
-  #set ($lastNameData = $regGroup.LastName)
-  #set ($emailData = $regGroup.Email)
-  #set ($passwordData = "")
 #else
-  #set ($regGroup = $intake.Register.Default)
+  #if ($user2)
+    #set ($regGroup = $intake.Register.mapTo($user2))
+    #set ($passwordData = "")
+  #else
+    #set ($regGroup = $intake.Register.Default)
+    #set ($passwordData = $regGroup.Password)
+  #end
+
   #set ($firstNameData = $regGroup.FirstName)
   #set ($lastNameData = $regGroup.LastName)
+  #set ($userNameData = $regGroup.UserName)
   #set ($emailData = $regGroup.Email)
-  #set ($passwordData = $regGroup.Password)
 #end
 
 <div class="axial">
 <table cellpadding="3" cellspacing="2" border="0">
 <tr>
- <th>* $l10n.FirstName</th>
+ <th>*&nbsp;$l10n.FirstName</th>
  <td>
   <input name="$regGroup.FirstName.Key" value="$firstNameData" type="text" size="25" />
   #fieldErrorMsg($regGroup.FirstName "")
  </td>
 </tr>
 <tr>
- <th>* $l10n.LastName</th>
+ <th>*&nbsp;$l10n.LastName</th>
  <td>
   <input name="$regGroup.LastName.Key" value="$lastNameData" type="text" size="25" />
   #fieldErrorMsg($regGroup.LastName "")
  </td>
 </tr>
 <tr>
- <th>* $l10n.Email</th>
+  ## FIXME: In SCB197, John notes that SecurityService makes user name
+  ## change problematic, as it assumes that a user name defines a user.
+ <th>$l10n.Username</th>
+ <td>
+  #* <input name="$regGroup.UserName.Key" value="$userNameData" type="text" size="25" />
+  #fieldErrorMsg($regGroup.UserName "") *#
+  $userNameData
+ </td>
+</tr>
+<tr>
+ <th>*&nbsp;$l10n.Email</th>
  <td>
   <input name="$regGroup.Email.Key" value="$emailData" type="text" size="25" />
   #fieldErrorMsg($regGroup.Email "")
@@ -66,8 +78,7 @@
 </tr>
 <tr>
  <th>
- #if ($state != "showedituser")*#end
- $l10n.Password
+ #if ($state != "showedituser")*#end&nbsp;$l10n.Password
  </th>
  <td>
   #if ($state != "showedituser")
@@ -81,7 +92,7 @@
 </table>
 </div>
 
-<p>* $l10n.Required</p>
+<p>*&nbsp;$l10n.Required</p>
 
 <div class="functnbar2">
   <input type="submit" name="eventSubmit_doEdituser" value="$l10n.Save" />&#160;
