--- a/src/templates/viewIssue/ViewIssueTab5.vm
+++ b/src/templates/viewIssue/ViewIssueTab5.vm
@@ -34,7 +34,7 @@
 
 #if ($currentIssue.isHistoryLong())
   #if ($fullHistory.equals("true"))
-    #set ($historyLink = $link.setPage("ViewIssue.vm").addPathInfo("id", $currentIssueId).addPathInfo("fullhistory", "false").addPathInfo("tab", "5"))
+    #set ($historyLink = $link.setPage("$template").addPathInfo("id", $currentIssueId).addPathInfo("fullhistory", "false").addPathInfo("tab", "5"))
     #foreach ($issueId in $data.Parameters.getStrings("issue_ids"))
       #set ($historyLink = $historyLink.addPathInfo("issue_ids", $issueId))
     #end
