forward port from SCAST_T1 branch
Issue number: 17190 - File attachments not working and intake error messages
are shown for issues that should not be affectedi on ViewIssueLong.vm
Modified files:
* src/templates/screens/ViewIssueLong.vm - have to use multipart encoding for
  file uploads to work.
* src/templates/viewIssue/ViewIssueTab4Att.vm
  src/java/org/tigris/scarab/actions/ModifyIssue.java - Add an issue identifier
  to the attachment intake group, so that it will be unique in a list of
  issues, as in ViewIssueLong.vm

--- a/src/templates/viewIssue/ViewIssueTab4Att.vm
+++ b/src/templates/viewIssue/ViewIssueTab4Att.vm
@@ -1,6 +1,6 @@
 #set ($atch = $scarabR.Attachment)
 #set ($intakeAttachment = $intake.Attachment.mapTo($atch))
-#set ($intakeAttachment = $intake.Attachment.setKey("fileKey"))
+#set ($intakeAttachment = $intake.Attachment.setKey("fileKey$currentIssue.QueryKey"))
 #set ($attachments = $currentIssue.ExistingAttachments)
 
 <h3>$l10n.Attachments</h3>
