--- a/src/templates/screens/ViewIssueLong.vm
+++ b/src/templates/screens/ViewIssueLong.vm
@@ -10,7 +10,7 @@
      #set ($currentIssue = $scarabR.getIssue($issueId))
      #if ($currentIssue && $scarabR.hasPermission($scarabG.Permission.ISSUE__VIEW, $currentIssue.Module))
        <h2>$currentIssue.UniqueId</h2>
-       <form method="post" action="$action">
+       <form method="post" action="$action" enctype="multipart/form-data">
        #foreach ($issueId in $issueList)
          <input type="hidden" name="issue_ids" value="$issueId" />
        #end
