* src/templates/layouts/Default.vm   <title>: If there's no title, display only the application's word   mark (generally "Scarab") in the title, neglecting a trailing colon.

--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -2,7 +2,7 @@
     "$staticLink.setPath("/style/tigris_transitional.dtd")">
 <html>
  <head>
-  <title>Scarab: $!title</title>
+  <title>${l10n.ScarabWordMark}#if ($title): ${title}#end</title>
   <meta http-equiv="Content-type" content="$data.ContentType" />
   #if ($updateFrequency && $updateFrequency.length() > 0)
   <meta http-equiv="refresh" content="$updateFrequency" />
