* src/templates/navigations/CommonLinks.vm   Set $module which this template already (incorrectly) referenced to   the current module, and use it to check whether the current user has   the permission necessary to use the "Edit templates" screen.
Issue: PCN18417
Reviewed by: Venkat

--- a/src/templates/navigations/CommonLinks.vm
+++ b/src/templates/navigations/CommonLinks.vm
@@ -1,11 +1,14 @@
 #if ($data.User.CurrentRModuleIssueType)
-  #if ($scarabR.CurrentModule.allowsNewIssues())
+  #set ($module = $scarabR.CurrentModule)
+  #if ($module.allowsNewIssues())
     #set ($rmit = $data.User.CurrentRModuleIssueType)
     <div>$link.setPage("$scarabR.NextEntryTemplate").setLabel("$l10n.EnterNew: $rmit.DisplayName.toLowerCase()")</div>
   #end
   #if (!$module.isGlobalModule())
     <div>$link.setPage("QueryList.vm").setLabel("$l10n.Queries")</div>
+    #if ($scarabR.hasPermission($scarabG.Permission.ISSUE__ENTER, $module))
     <div>$link.setPage("TemplateList.vm").setLabel("$l10n.EditTemplates")</div>
+    #end
     <div>$link.setPage("reports,ReportList.vm").setLabel("$l10n.Reports")</div>
   #end
 #end
