* src/i18n/ScarabBundle_en_US.properties   DefineHeaderSelectionOptionsAndHeadingSummaryInstructions: A new   resource which is a combination of a couple of older resources to   facilitate easier translation.
  DefineHeaderInstructions, ToSetThe: Merged into new
  DefineHeaderSelectionOptionsAndHeadingSummaryInstructions resource.

* src/templates/screens/reports/AxisConfiguration.vm
  Used new arrangement of text resources.


Issue: PCN18524
Submitted by: Ed Korthof
Reviewed by: Daniel Rall

--- a/src/templates/screens/reports/AxisConfiguration.vm
+++ b/src/templates/screens/reports/AxisConfiguration.vm
@@ -52,8 +52,7 @@
   <h3>$l10n.get("${rowCol}Headings")</h3>
   #if ($multiHeading)
   <div class="colbar">
-    $l10n.format("DefineHeaderInstructions", "$l10n.EditSelectedHeading")
-    "$l10n.format("SelectOptionsHeader", $axisIndex)" $l10n.ToSetThe $l10n.HeadingSummary.toLowerCase().
+    $l10n.format('DefineHeaderSelectionOptionsAndHeadingSummaryInstructions', $l10n.EditSelectedHeading, $l10n.format('SelectOptionsHeader', $axisIndex), $l10n.HeadingSummary.toLowerCase())
   </div>
   #end
   <div>
