--- a/src/templates/screens/admin/GlobalAttributeGroupEdit.vm
+++ b/src/templates/screens/admin/GlobalAttributeGroupEdit.vm
@@ -105,7 +105,7 @@
 ##<input type="submit" value="$l10n.CopySelected" />&#160;
 #if (!$group.Attributes.isEmpty())
 <input type="submit" value="$l10n.DeleteSelected" name="eventSubmit_doDeleteattributes" />&#160;
-<input type="submit" value="$l10n.Resort" name="eventSubmit_doSaveglobal" />
+##<input type="submit" value="$l10n.Resort" name="eventSubmit_doSaveglobal" />
 #end
 </div>
 
