--- a/src/templates/screens/admin/IssueTypeAttributeEdit.vm
+++ b/src/templates/screens/admin/IssueTypeAttributeEdit.vm
@@ -128,7 +128,7 @@ $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.here").</em></p>
 <input type="submit" value="$l10n.AddNew" name="eventSubmit_doGotoothertemplate" />&#160;
 ## commenting out till we decide how to do <input type="submit" value="$l10n.Copy" />&#160;
 <input type="submit" value="$l10n.DeleteSelected" name="eventSubmit_doDeleteissuetypeoptions" />&#160;
-<input type="submit" value="$l10n.Resort" name="eventSubmit_doSave" />
+##<input type="submit" value="$l10n.Resort" name="eventSubmit_doSave" />
 </div>
 #end
 
