--- a/src/templates/screens/admin/ManageArtifactTypes.vm
+++ b/src/templates/screens/admin/ManageArtifactTypes.vm
@@ -99,7 +99,7 @@
 #if ($rmits && !$rmits.isEmpty())
   <input type="submit" value="$l10n.RemoveSelected" 
       name="eventSubmit_doDeletemoduleissuetype" />&#160;
-  <input type="submit" value="$l10n.Resort" name="eventSubmit_doSave" />
+ ## <input type="submit" value="$l10n.Resort" name="eventSubmit_doSave" />
 #end
 </div>
 
