* src/templates/macros/GlobalMacros.vm   #entryTemplateAndAttributes(): Use Collection.isEmpty() rather than   checking whether size() == 0 for less code and possibly more   efficient operation.
* src/templates/screens/entry/Wizard3.vm
  Don't show the "Submit issue" and "Reset" buttons at the bottom of
  the screen when there are no attribute groups.


Issue: PCN18226
Submitted by: P. Arun <arun@collab.net>
Reviewed by: Daniel Rall

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -791,9 +791,8 @@ Prints out a date entry form.
 #macro(entryTemplateAndAttributes $issue $moduleAttributeGroups $buttonName $buttonEvent $showTemplates)
 #set ($module = $issue.Module)
 #set ($issueType = $issue.IssueType)
-#set ($magSize = $moduleAttributeGroups.size())
 
-#if ($magSize == 0)
+#if ($moduleAttributeGroups.isEmpty())
 <h3>$title</h3>
 <p><em>$l10n.NoAttributesDefinedForIssueType</em></p>
 #else
