src/java/org/tigris/scarab/actions/admin/GlobalAttributeEdit.java ================================================================== #doDeleteattribute(RunData data, TemplateContext context)- Target template is obtained from the method "getCancelTemplate(data)" instead of hard-coding it. This is done since this action is now associated with both GlobalAttributeEdit.vm and UserAttributeEdit.vm
src/templates/screens/admin/UserAttributeEdit.vm
=================================================
Added facility to delete user attributes that are associated with the projects/artifact types.

src/templates/screens/admin/GlobalAttributeEdit.vm
====================================================
"$cancelTemplate" is set and passed as a hidden parameter while confirm deleting global attributes that are associated
with projects/artifact types.  This is done to avoid hard coding the template name in "doDeleteattribute(RunData data, TemplateContext context)"
method of GlobalAttributeEdit.java


Issue: PCN17803
Submitted by: Venkat <venkat@collab.net>
Reviewed by: Daniel Rall

--- a/src/templates/screens/admin/GlobalAttributeEdit.vm
+++ b/src/templates/screens/admin/GlobalAttributeEdit.vm
@@ -4,9 +4,13 @@
 <div class="app" id="div3-0-2-0">
 
 #if ($deleting)
-<form action="$link.setPage("admin,GlobalAttributeEdit.vm")" method="post">
-<input type="hidden" name="action" value="admin.GlobalAttributeEdit" />
-<input type="hidden" name="attId" value="$attribute.AttributeId" />
+   <form action="$link.setPage("admin,GlobalAttributeEdit.vm")" method="post">
+   <input type="hidden" name="action" value="admin.GlobalAttributeEdit" />
+   <input type="hidden" name="attId" value="$attribute.AttributeId" />
+
+   #set ($cancelTemplate = $data.Parameters.getString("$scarabG.Constant.CANCEL_TEMPLATE", "admin,GlobalAttributeShow.vm"))
+   <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="$cancelTemplate" />
+
    <div class="warningmessage">
    $l10n.ConfirmDeleteAttribute
    #if ($attribute.hasModuleMappings())
