When adding invalid dependencies to an artifact from the multiple issue view page, show alert messages only for the issue that is being edited and not for all the issues in the page.
1. src/java/org/tigris/scarab/actions/ModifyIssue.java

#saveDependencyChanges()-Changed to get the Group from the Issue's querykey instead of DEFAULT_KEY.


2.src/templates/viewIssue/ViewIssueTab4Dep.vm

the key for depend group is set using the current issue  query key and
the key set by DEFAULT was removed.


Issue: PCN 18237

Issue reviewed by : Elicia

Issue Committed by: IRK

--- a/src/templates/viewIssue/ViewIssueTab4Dep.vm
+++ b/src/templates/viewIssue/ViewIssueTab4Dep.vm
@@ -106,7 +106,7 @@ $l10n.depend_nonblockingReverse this issue
 #end
 
 #if ($canEdit)
-#set ($newDependGroup = $intake.Depend.Default)
+#set ($newDependGroup = $intake.Depend.setKey("newDep$currentIssue.QueryKey"))
 #indexedRows($counter)
 #if (!$issueParents.isEmpty() || !$issueChildren.isEmpty())
 <td>&nbsp;</td>
