* src/templates/viewIssue/ViewIssueTab1.vm   $display: Use boolean value instead of string value.
  When displaying attributes which have a predetermined set of options
  for their value, use the option's display name for the current
  module's issue type.

Issue: PCN17456
Submitted by: John McNally
Reviewed by: Daniel Rall

--- a/src/templates/viewIssue/ViewIssueTab1.vm
+++ b/src/templates/viewIssue/ViewIssueTab1.vm
@@ -52,22 +52,22 @@
                   </td>
                  </tr>
             #elseif ($attVal.isSet())
-               #set ($display = "true")
+               #set ($display = true)
                #set ($isOptionAttr = $attVal.Attribute.isOptionAttribute())
                #if ($isOptionAttr)
                  #if ($attVal.AttributeOption.Deleted.toString().equals("true"))
-                     #set ($display = "false")
+                     #set ($display = false)
                  #end
                #end
-               #if ($display.equals("true"))
+               #if ($display)
                  <tr>
                    <th>$attVal.RModuleAttribute.DisplayValue</th>
                    <td>
                    #set ($attrInput = $intake.AttributeValue.mapTo($attVal))
                    #if ($isOptionAttr)
-                      $!attVal.AttributeOption.Name
+                     $!module.getRModuleOption($attVal.AttributeOption, $issueType).DisplayValue
                    #else
-                   $!attrInput.Value
+                     $!attrInput.Value
                    #end
                    </td>
                  </tr>
@@ -102,4 +102,3 @@
 <input type="submit" value="$l10n.Done" name="eventSubmit_doSubmitattributes" />
 </div>
 #end
-
